styles.css
:root{
    --main-color: rgba(20, 110, 245, 0.778);
    --light-mood:rgba(255, 255, 255, 0.947);
    --dark-background:#0b131e;
    --dark-tile:#202C3C;
    --white-text:#E1E0E5;
    --main-blue:#3775fb;
}
*{
  margin:0;
  padding:0;
}
body{
  overflow: hidden;
  font-family: 'Poppins', sans-serif;
}

.landpage{
  position: absolute;
  background-image:url(images/landing_page.jpg);
  height:100vh;
  width:100%;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  color:var(--light-mood);
  text-shadow: 5px 3px 19px rgba(0, 0, 0, 0.5);
  text-align: center;
  transition: transform 1s ease-in-out;
  z-index: 1000;
}
.title_span{
  color: rgba(78, 144, 244, 0.647);
}
.landing_page_text{
    padding-top: 11vh;
    font-size: 10vw;
    font-weight: 700;
    color: rgba(255, 255, 255, 0.778);
}
.landingpage_des{
    font-size: 1.3vw;
    color: rgba(255, 255, 255, 0.663);
    
}
.btn_div{
    position: relative;
     min-height: 50vh;
}
.start_btn{
    position: absolute;
    bottom: 10%; 
    left: 50%; 
    transform: translateX(-50%);
    width: 20%;
    height: 12%;
    width:20%;
    cursor: pointer;
    border-radius: 50px;
    color: white;
    border: 3px solid var(--main-color);
    font-size: 22px;
    background-color: rgba(240, 248, 255, 0.252);
}
.start_btn:hover{
    background-color:  rgba(66, 141, 254, 0);
    color: var(--light-mood);
    border: 3px solid var(--light-mood);
        box-shadow:
    0 0 10px var(--main-color),
    0 0 20px var(--main-color),
    0 0 30px #00eeff3f,
    0 0 40px #00eeff19;
    transition: all 0.5s ease;
}

/* Medium devices */
@media (max-width: 991px) {
  .landing_page_text {
    font-size: 8vw;
    padding-top: 13vh;
  }

  .landingpage_des {
    font-size: 2.5vw;
    margin-top: 2vh;
    padding: 0 2.5vw;
  }

.btn_div{
    position: relative;
    min-height: 75vh;
}
  .start_btn {
    font-size: 1.8vw;
    width: 40%;
    height: 6%;
  }
}

/* Small devices (phones) */
@media (max-width: 600px) {
  .landing_page_text {
    font-size: 10vw;
    padding-top: 22vh;
  }

  .landingpage_des {
    font-size: 4vw;
    margin-top: 3vh;
  }

  .start_btn {
    font-size: 4vw;
    width: 50%;
    height: 6%;
  }

  .btn_div {
    min-height: 63vh;
  }
}
.landpage.slide-up {
    transform: translateY(-100%);
}

/* main page css start */
.main_page{
  overflow: hidden;
  background-color: var(--dark-background);
  width: 100%;
  height: 100vh;
  display: flex;
}
.nav_bar{
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap:60px;
  box-sizing: border-box;
  background-color:var(--dark-tile);
  width:5vw;
  height: calc(100vh - 30px);
  border-radius: 25px;
  margin: 15px;
}
.main_information{
  width:55vw;
  height:100vh;
}
.main_description{
  width:37vw;
  height:100vh;
}
.search_bar{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 15px;
  width: calc(100% - 10vh);
  height: 10vh;
  margin: 1vh 2vw;
  border-radius: 25px;
}
.main_infor{
  width: auto;
  height: 42vh;
  margin-top: 3vh;
  display: flex;
  justify-content: space-around;
}
.free_space{
  width: 100vw;
  height: 10vh;
}
.description_area {
  width: calc(100% - 30px);
  height: calc(90% - 30px);
  background-color: var(--dark-tile);
  margin: 15px;
  border-radius: 15px;
}
.other_details_top, .other_details_bottom {
  width: 100%;
  height:20vh;
  display: flex;
  justify-content: center;
}
.other_details{
  background-color: var(--dark-tile);
  height: 17vh;
  width:40%;
  margin: 10px;
  border-radius: 15px;
}
#img1{
  height: 40vh;
  filter: drop-shadow(5px 5px 20px rgba(51, 92, 196, 0.564));
  transition: opacity 0.5s ease-in-out;
}
.city_name{
  font-size: 2.5rem;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  color: var(--white-text);
}
.state{
  font-size: 1.5rem;
  color: var(--white-text);
}
.temp{
  font-size: 6rem;
  margin-top: 30px;
  color: var(--white-text);
}
.last_update{
  color: var(--white-text);
  font-size: 0.7rem;
  font-weight: 100;
}
#city{
  padding-left: 25px;
  font-size: 1rem;
  color: var(--white-text);
  width:60%;
  height: 50%;
  border-radius: 25px;
  background-color: var(--dark-background);
  border: 2px solid rgba(131, 228, 250, 0.952);
}
input::placeholder {
  text-align: center;
  color: #4d5157af;
  font-size: 1.1rem;
}

#searchBtn{
  width: 60px;
  height: 40px;
  border-radius: 25px;
  border: 1px solid rgba(131, 228, 250, 0.952);
   cursor: pointer;
  background-color: var(--dark-tile);
  transition: background-color 0.3s ease, transform 0.3s ease;
}
#searchBtn i{
  color: rgba(131, 228, 250, 0.952);
  font-size: 1.5rem;
  transition: background-color 0.3s ease, transform 0.3s ease;
}

#searchBtn:hover{
  background-color: rgba(131, 228, 250, 0.952);
  border: 1px solid var(--dark-tile);
}

#searchBtn i:hover{
  color: var(--dark-tile);
  transform: scale(1.2);
}
.colored-line{
  border: none;
  height:0.7px;
  background:linear-gradient(45deg,rgb(41, 237, 41),var(--main-blue),rgba(211, 7, 41, 0.592));
  width: 80%;
  margin: auto;
}
.nav_bar button{
  background-color: transparent;
  border: none;
  cursor: pointer;
}
.nav_bar button i{
  color: white;
  font-size: 2rem;
}
.small_datas{
  color: var(--white-text);
  opacity: 85%;
  font-size: 2.8rem;
  text-align: center;
}
.other_topic{
  display: flex;
  margin-left: 7%;
  gap: 10px;
  margin-top: 3vh;
  color: rgba(172, 170, 170, 0.764);
}
.other_topic i{
  color: #3775fbc7;
  font-size: 1.5rem;
}
.desc_area_topc,.air_head{
  font-size: 1.5rem;
  text-align: center;
  padding-top: 25px;
  padding-bottom: 10px;
  color: rgba(131, 228, 250, 0.952);
}
.desc_hr{
  border: none;
  height: 1px;
  background: linear-gradient(45deg,#0399f6a8,rgba(241, 242, 242, 0.942),rgba(3, 159, 249, 0.641));
  width: 70%;
  margin: auto;
}
.descrip_sentence{
  color: var(--white-text);
  opacity: 85%;
  padding-top: 5vh;
  padding-bottom: 5vh;
  padding-right: 30px;
  padding-left: 40px;
  text-align: justify;
}
table {
  margin: auto;
  padding-top: 20px;
  padding-left: 10%;
}
.desc_hr2{
  background: linear-gradient(45deg,#0399f6a8,rgba(241, 242, 242, 0.942),rgba(3, 159, 249, 0.641));
  margin: auto;
  width: 70%;
  border: none;
  height: 2px;
}
td{
  color: rgba(255, 255, 255, 0.648);
  text-align: justify;
}
.air_data{
  width:50%;
  padding-left: 30px;
}
.footer{
  background-color:rgba(131, 228, 250, 0.952);
  width: 100%;
  margin-top: 30px;
}
.foter_text{
  font-size: 0.7rem;
  text-align: center;
}
.contact_text{
  color:rgba(131, 228, 250, 0.952) ;
  margin-top: 25px;
  font-size: 0.8rem;
  text-align: center;
}
.contact_links i{
  color: rgba(131, 228, 250, 0.952);
    border-radius: 50%;
   transition: transform 0.3s ease, color 0.5s ease;
}
.contact_links{
  display: flex;
  justify-content: center;
  margin-top: 5px;
  gap:15px;
}
.contact_links i:hover{
  transform: scale(2);
}
@media (max-width: 600px) {
  .main_page{
    flex-direction: column;
    height: auto;
  }
  .nav_bar{
   flex-direction: row;
   height: auto;
   width: 100%;
   border-radius: 0;
   margin: 0;
   padding: 10px;
  }
   .main_information,
  .main_description {
    width: 100%;
    height: auto;
  }

  .main_infor {
    align-items: center;
    flex-direction: column;
    height: auto;
  }
  .search_bar{
    flex-direction: column;
    margin: 10px auto;
  }
    #city {
    width: 100%;
  }
  #searchBtn {
    width: 50%;
  }
  .other_details_top,
  .other_details_bottom {
    flex-direction: column;
    align-items: center;
    height: auto;
  }
  .other_details {
    width: 90%;
    height: auto;
  }

  .descrip_sentence {
    padding: 20px;
    font-size: 1rem;
    text-align: justify;
  }

  .air_data {
    width: 90%;
    padding: 0;
  }

  .small_datas {
    font-size: 2rem;
  }

  table {
    width: 90%;
    padding: 0;
  }

  .footer,
  .foter_text,
  .contact_text {
    font-size: 0.7rem;
    text-align: center;
  }

  .contact_links {
    flex-wrap: wrap;
    gap: 10px;
  }
}
.version{
  text-align: center;
  margin-top: 5px;
  font-size: 0.6rem;
  color: rgba(131, 228, 250, 0.952);
}

